>all pages have content >need to wrap gallery and fix end of row layout >gallery images not loading before mid transition >social imgs and listen iframes preloading

--- a/public/style.css
+++ b/public/style.css
@@ -43,19 +43,19 @@ body::before {
 }
 
 header {
-    width: 100%;
+    width: 100vw;
     height: auto;
     padding-top: 12px;
     text-align: center;
 }
 
 main {
-    width: 100%;
+    width: 100vw;
     height: auto;
 }
 
 footer {
-    width: 100%;
+    width: 100vw;
     height: auto;
     text-align: center;
 }
@@ -143,19 +143,33 @@ a.social-item img {
     display: block;
 }
 
-/* listen */
-
-.aesthetic {
-    width: 1080px;
+.listen {
+    width: 616px;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 0;
+    grid-template-columns: repeat(2, 1fr);
     gap: 8px;
 }
 
+.listen-item {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 4px;
+    position: relative;
+    display: block;
+}
+
+.aesthetic {
+    width: 1088px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1px;
+    gap: 2px;
+}
+
 .aesthetic-item {
-    width: 100%;
+    width: 360px;
     height: auto;
     display: block;
     grid-row-end: span var(--span);
@@ -169,14 +183,18 @@ a.social-item img {
 
 /* about */
 
-@media (max-width: 1128px) {
+@media (max-width: 1132px) {
     .aesthetic {
-        width: 720px;
+        width: 724px;
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 768px) {
+    .listen {
+        width: 300px;
+        grid-template-columns: repeat(1, 1fr);
+    }
     .aesthetic {
         width: 360px;
         grid-template-columns: repeat(1, 1fr);
@@ -222,6 +240,6 @@ a.social-item img {
 
 @media (max-width: 359px) {
     body:before {
-        content: "you either zoomed in or your screen hella small bruh xD";
+        content: "you zoomed in or your screen hella small bruh xD";
     }
 }
